Изменение пароля вынесено в отдельную ручку, дополнение документации swagger.
