# docs/swagger.json
@@ -226,6 +226,12 @@
                         "required": true
                     },
                     {
+                        "type": "boolean",
+                        "description": "Следует ли переместить письмо в эту папку (с последующим удалением из источника).",
+                        "name": "move",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "CSRF токен",
                         "name": "X-CSRF-Token",
@@ -670,7 +676,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Прочитать письмо по его id",
+                "summary": "Отметить число прочитанным/непрочитанным по его id. При отсутствии параметра isread запрос отмечает письмо с заданным id прочитанным.",
                 "parameters": [
                     {
                         "type": "string",
@@ -678,6 +684,12 @@
                         "name": "id",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Задать конкретное значение поля вручную.",
+                        "name": "isread",
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -790,7 +802,7 @@
                     "200": {
                         "description": "Информация о пользователе",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.ProfileInfo"
                         }
                     },
                     "401": {
@@ -895,6 +907,71 @@
                 "responses": {
                     "200": {
                         "description": "Успешное установка аватарки.",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.JsonResponse"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.JsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка валидации формы, БД или сессия не валидна.",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.JsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/profile/change_password": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.JsonResponse"
+                        },
+                        "headers": {
+                            "X-CSRF-Token": {
+                                "type": "string",
+                                "description": "CSRF токен"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Изменение пароля пользователя",
+                "parameters": [
+                    {
+                        "description": "Форма изменение пароля.",
+                        "name": "SettingsForm",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ChangePasswordForm"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "CSRF токен",
+                        "name": "X-CSRF-Token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешное изменение пароля.",
                         "schema": {
                             "$ref": "#/definitions/pkg.JsonResponse"
                         }
@@ -1100,6 +1177,23 @@
         }
     },
     "definitions": {
+        "models.ChangePasswordForm": {
+            "type": "object",
+            "properties": {
+                "password_new": {
+                    "type": "string",
+                    "maxLength": 45
+                },
+                "password_new_confirmation": {
+                    "type": "string",
+                    "maxLength": 45
+                },
+                "password_old": {
+                    "type": "string",
+                    "maxLength": 45
+                }
+            }
+        },
         "models.Folder": {
             "type": "object",
             "properties": {
@@ -1121,7 +1215,8 @@
             "type": "object",
             "properties": {
                 "addressee": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "client_id": {
                     "type": "integer"
@@ -1139,7 +1234,8 @@
                     "type": "boolean"
                 },
                 "sender": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "text": {
                     "type": "string"
@@ -1164,7 +1260,8 @@
             "type": "object",
             "properties": {
                 "addressee": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "files": {
                     "type": "string"
@@ -1173,7 +1270,28 @@
                     "type": "string"
                 },
                 "theme": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
+                }
+            }
+        },
+        "models.ProfileInfo": {
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "type": "string",
+                    "maxLength": 45
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string",
+                    "maxLength": 45
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 45
                 }
             }
         },
@@ -1181,13 +1299,12 @@
             "type": "object",
             "properties": {
                 "first_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "last_name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 }
             }
         },
@@ -1195,10 +1312,12 @@
             "type": "object",
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 }
             }
         },
@@ -1206,39 +1325,24 @@
             "type": "object",
             "properties": {
                 "first_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "last_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "password_confirmation": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "first_name": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 45
                 }
             }
         },
